Good vector notation, add explication for strain Finish first throw of temp ramp BCDI
Change results directories

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -17,7 +17,7 @@ Secondly, economical challenges imply using cheaper, readily available raw mater
 For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
 
 Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
-Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
+Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and nanoparticles \parencite{WHOAirPollution, HECK2001, GANDHI2003}.
 Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (\qty{65}{\percent} of \ce{NO_x}, \qty{\approx 35}{\percent} of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
 To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organization (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
 Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
