--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -73,8 +73,9 @@ The first step towards the use of these experimental methods is to understand wh
 \subsection{Active sites in heterogeneous catalysis}
 
 Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximize the surface area to volume ratio, increasing the number of available active sites for catalysis \parencite{Vogt2022}.
-This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{CHE1989, Molenbroek2009, Schauermann2013}.
-The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Boukouvala2021}.
+This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{CHE1989, Molenbroek2009, vanSanten2010, Schauermann2013}.
+As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{HECK2001}.
+The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{WINTERBOTTOM1967, Boukouvala2021}.
 The orientation and structure of each facet on the nanoparticle surface can be described by its Miller (hkl) indices.
 Between facets are the nanoparticle edges and corners, notorious for being very favorable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
 \cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density dunctional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
@@ -109,6 +110,6 @@ A modern theoretical approach to the interaction between surface and adsorbates 
 
 In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}, the study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions, the main conclusion being that there is a direct relation between lattice strain, adsorption energy and surface reactivity, which has been confirmed by later studies \parencite{Kitchin2004, Kibler2005, Ontaneda2015}.
 Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, DESJONQUERES1975, EGELHOFF1987, Hammer2006}.
-\textcolor{Important}{Check ref}
+\textcolor{Important}{Check ref CA, also d-band centre ?}
 The application of this work has been demonstrated by Wang et al. in \cite*{Wang2016} and is at the origin of many scientific studies for strain engineering in catalysis, probed with techniques sensitive to the catalyst structure, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, ulvestad_situ_2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
 
