--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -72,7 +72,7 @@ This expression is only valid within the kinematical approach to diffraction.
     Simulation of the intensity of a crystal truncation rod perpendicular to [2, 0] node for a single crystal made out platinum, performed with ROD \parencite{Vlieg2000}.
     (a) Evolution of the CTR intensity together with the roughness parameter $\beta$, the intensity between the Bragg peaks decreases with increasing roughness.
     (b) Evolution of the CTR intensity together with the displacement $\delta z$ of the last atomic layer perpendicular to the surface.
-    The CTR shows a stronger asymmetry with high relaxations and the position of the minimum between Bragg peaks is shifted.
+    The CTR shows a stronger asymmetry with high surface relaxations and the position of the minimum between Bragg peaks is shifted.
     }
     \label{fig:CTRSimulation}
 \end{figure}
@@ -88,7 +88,7 @@ The effect of roughness is illustrated in fig. \ref{fig:CTRSimulation}.
 This model only serves to describe the roughness of the bulk structure and does not function to describe the roughness of additional surface structures in which case more complex models can be used (sec. \ref{sec:SXRD100}).
 
 In surface x-ray diffraction, lattice strain is defined as the displacement of the surface atomic layers with respect to the bulk unit cell lattice parameters.
-Positive or negative strain, also called relaxation when due to the minimisation of the surface energy from the presence of an ad-atom \parencite{Gupta1981}, has the effect of changing the position of the CTR minimum and of skewing the shape of the CTR as illustrated in fig. \ref{fig:CTRSimulation}.
+Positive or negative strain, also called surface relaxation when due to the minimisation of the surface energy from the presence of an ad-atom \parencite{Gupta1981}, has the effect of changing the position of the CTR minimum and of skewing the shape of the CTR as illustrated in fig. \ref{fig:CTRSimulation}.
 
 Surface reconstructions also yield crystal truncation rods in the reciprocal space, perpendicular to the nodes of the reconstructed lattice, called super-stucture rods (SSR).
 These rods are structured in $l$ if the width of the surface reconstruction in $\vec{c}$ is more than a few unit cells.
