--- a/main.tex
+++ b/main.tex
@@ -233,13 +233,16 @@
     \input{Sections/2_Theory_Models/ComputerPrograms}
     
 % Results BCDI
-    \chapter{Bragg coherent diffraction imaging study of Pt nanoparticles during the oxidation of ammonia}
-    \input{Sections/3_Results_BCDI/BCDI}
+    \chapter{Structural evolution of Pt nanoparticles during the oxidation of ammonia}}
+    \input{Sections/3_Results_Nanoparticles/BCDITempRamp}
+    \input{Sections/3_Results_Nanoparticles/SXRDEpitaxy}
+    \input{Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia}
 
 % Results SXRD
     \chapter{Structural and chemical evolution of single Pt facets during the oxidation of ammonia}
-    \input{Sections/4_Results_SXRD/111}
-    \input{Sections/4_Results_SXRD/100}
+    \input{Sections/4_Results_SingleCrystals/Common}
+    \input{Sections/4_Results_SingleCrystals/111}
+    \input{Sections/4_Results_SingleCrystals/100}
 
 % Conclusion
 %     \chapter{Conclusion}
@@ -251,10 +254,15 @@
 
 % Appendices
     \appendix
-    % \chapter{3D BCDI \textit{operando} measurements}
-    % \input{Sections/6_Appendix/OperandoBCDI}
 
+    \chapter{Diffraction vocabulary}
+    \input{Sections/6_Appendix/DiffractionVocab}
 
+    \chapter{BCDI temperature ramp data}
+    \input{Sections/6_Appendix/TempRampBCDI}
+
+    \chapter{3D BCDI \textit{operando} measurements}
+    \input{Sections/6_Appendix/OperandoBCDI}
 
 % 4ème de couverture
 \input{Sections/99_4eme_couverture}
