--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -15,7 +15,8 @@ Moreover, the scattering volume is assumed to be in the focal plane of the focus
 Finally, the scattering volume is assumed to be small with dimensions below the x-ray extinction length to ignore multiple scattering and stay in the kinematical approach of diffraction.
 The amplitude of the incident field is considered to be homogeneous in the scattering volume.
 
-The community has recently been investigating a dynamical approach to Bragg Coherent Diffraction Imaging (BCDI) \parencite{Yan2014, Shabalin2017, Hu2018, Gao2022} using the Takagi-Taupin \parencite{Takagi1962, Takagi1969}. This method tends to validate the kinematical approach when working with slightly strained sub-micron sized crystals \parencite{Karpov2019, Barringer2021}.
+The community has recently been investigating a dynamical approach to Bragg Coherent Diffraction Imaging (BCDI) \parencite{Yan2014, Shabalin2017, Hu2018, Gao2022} using the Takagi-Taupin \parencite{Takagi1962, Takagi1969}.
+This method tends to validate the kinematical approach when working with slightly strained sub-micron sized crystals \parencite{Karpov2019, Barringer2021}.
 The phase of the incoming and scattered waves must however be corrected for refraction and absorption \parencite{Harder2007, Gao2022} which does not contradict the main hypothesis of the kinematical approach which is that in the Born approximation, the structure factor of the crystal is equal to the Fourier transform of its electronic density \parencite{Paganin}.
 
 Another approach is to write the structure factor as the sum over each atom present in the crystal of the atomic scattering factor multiplied by a phase component (eq. \ref{eq:FCrystal1}).
@@ -38,9 +39,9 @@ In the case of strained crystals, eq. \ref{eq:Fcrystal} can be rewritten as foll
 
 \begin{align}
     \label{eq:FcrystalBCDI1}
-    F_{crystal}(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.(\vec{r}_{0,j} + \vec{u}_{j})} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}}\\
+    F_{crystal}(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.(\vec{r}_{0,j} + \vec{u}_{j})} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k}\\
     \label{eq:FcrystalBCDI2}
-    F_{crystal}(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.(\vec{R_k} + \vec{u}_{k})}
+    F_{crystal}(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.(\vec{R}_k + \vec{u}_{k})}
 \end{align}
 
 where $\vec{r}_{0,j}$ is the ideal position of the atom $j$ in the unit cell and $\vec{u}_{j}$ is the displacement from that position.
@@ -50,13 +51,13 @@ To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only 
 
 \begin{align}
     \label{eq:FcrystalBCDI3}
-    F(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}} e^{i\vec{q}.\vec{u}_k}\\
+    F(\vec{q}) & = \sum_j^{N_{atoms, uc}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_{0,j}} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i\vec{q}.\vec{u}_k}\\
     \label{eq:FcrystalBCDI4}
-    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}} e^{i(\vec{G}+\vec{q}-\vec{G}).\vec{u}_k}\\
+    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i(\vec{G}+\vec{q}-\vec{G}).\vec{u}_k}\\
     \label{eq:FcrystalBCDI5}
-    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}} e^{i\vec{G}.\vec{u}_k} \times e^{i(\vec{q}-\vec{G}).\vec{u}_k}\\
+    F(\vec{q}) & = F_{uc}^k(\vec{q}) \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k} \times e^{i(\vec{q}-\vec{G}).\vec{u}_k}\\
     \label{eq:FcrystalBCDI6}
-    F(\vec{q} \approx \vec{G}) & = \sum_k^{N_{uc}} F_{uc}^k(\vec{G}) e^{i\vec{q}.\vec{R_k}} e^{i\vec{G}.\vec{u}_k}\\
+    F(\vec{q} \approx \vec{G}) & = \sum_k^{N_{uc}} F_{uc}^k(\vec{G}) e^{i\vec{q}.\vec{R}_k} e^{i\vec{G}.\vec{u}_k}\\
     \label{eq:FcrystalBCDI7}
     F(\vec{q} \approx \vec{G}) & = DFT[\rho_k(\vec{r}) e^{i\vec{G}.\vec{u}_k}]
 \end{align}
@@ -65,7 +66,7 @@ The first part of eq. \ref{eq:FcrystalBCDI6} can be considered to be the Fourier
 Moreover, one can recognize the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$ in which $\rho_k(\vec{r})$ is the $k-th$ sample of the series that consist in $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, favre-nicolin_semiconductor_2011, Godard2021}.
 The reason for the approximation $\vec{q} \approx \vec{G}$ is simply to be able to use a Fast Fourier Transform (FFT) algorithm to compute the DFT that has a linearithmic time complexity $O(n \, log(n))$.
 This approximation breaks down far away from the Laue condition or if the strain is so important that the condition $(\vec{q}-\vec{G}).\vec{u}_k<<1$ is not anymore respected to move from eq. \ref{eq:FcrystalBCDI5} to eq. \ref{eq:FcrystalBCDI6} \parencite{Takagi1969}.
-\textcolor{Important}{give some example with Pt}
+A pratical example of the limits of this equation is given is sec. \ref{sec:StrainTempRamp}.
 
 In the case of highly strained crystal, or when the intensity must be computed far away from Bragg peaks, it is still possible to resort to so-called \textit{atomistic} simulations by computing the scattering intensity from the position of each atom in the crystal (eq. \ref{eq:FCrystal1}).
 However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-perfomance clusters due to a quadratic time complexity $O(n^2)$.
@@ -74,7 +75,7 @@ Atomistic simulations are usually used when studying crystals of dimensions belo
 For a non-strained crystal, the Lattice factor is the same at each Bragg peak, equal to the Fourier transform of the crystal's lattice.
 In the case of a strained crystal, the additional phase factor introduced in eq. \ref{eq:FcrystalBCDI7} breaks the centrosymmetry around each Bragg peak, due to the inhomogeneous displacement field in the crystal.
 The effect of the displacement can be seen in the distortion of the scattering intensity around Bragg peaks.
-It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector, which means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal base ($\vec{q_1}, \vec{q_2}, \vec{q_3}$).
+It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector, which means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal base ($\vec{q}_x, \vec{q}_y, \vec{q}_z$).
 
 \subsubsection{Data collection} \label{sec:DataCollectionBCDI}
 
@@ -128,7 +129,7 @@ In three dimensions, the oversampling condition becomes $\sigma>2^{1/3}$ \parenc
 When it comes to Fourier transforms, higher oversampling can offer several advantages such as reducing the possibility of aliasing (high-frequency components being mistakenly represented as lower frequencies due to insufficient sampling), spectral leakage (frequency components spread into neighboring frequency bins in the Fourier transform, minimized if the frequency bins become narrower).
 Moreover, with more densely spaced samples, the interpolation process can more faithfully reconstruct the original signal without introducing artifacts.
 However, high oversampling takes more time and can for example limit the number of rocking curves that can be recorded.
-An oversampling of three in each direction is in general sufficient to successfully reconstruct the probed samples \parencite{Dupraz2016}.
+An oversampling of three in each direction is in general sufficient to successfully reconstruct the probed samples \parencite{Dupraz2015}.
 The oversampling condition dictates partly the intrumental parameters which define the extent of the data voxels, the small volumes that constitute the 3D data array.
 
 \cite{fienup_reconstruction_1978, Fienup1982, Fienup1986} have laid the ground for computer methods that permit phase retrieval with computer algorithms based on real-space and reciprocal space constraints, once the oversampling condition has been satisfied.
@@ -215,16 +216,16 @@ This method is then called the strain shell correlation \parencite{Girard2020}.
 However, one must keep in mind that the upper threshold for the strain resolution exists based on the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ condition, which mostly affect the quality of the phase retrieval, highly strained crystals are very difficult to reconstruct and represent the next milestone in Bragg coherent diffraction imaging.
 One could imagine a future in which the atomistic computation of the scattering factor has been so optimized that phase retrieval algorithms would only be needed to provide an initial guess to the electronic density, and be replaced in the final steps by a simple fitting of the computed structure factor to the square root of the measured intensity.
 
- reverse Monte Carlo pour permettre un fit multi-paramètres
- Monte carlo \parencite{RLMcGreevy_2001}
+\textcolor{Important}{reverse Monte Carlo pour permettre un fit multi-paramètres
+ Monte carlo \parencite{RLMcGreevy_2001}}
 
 \subsection{Facet analysis} \label{sec:FacetAnalysis}
 
 After phase retrieval, it is possible to exploit the electronic density of the reconstructed crystal.
 The surface of the reconstructed crystal corresponds to a layer of voxels in the three dimensional array.
-A study by J. Carnis \textit{et al.} \parencite*{Carnis2019_scientific_reports} contains guidelines on how to correctly select the surface voxels detailed below.
+J. Carnis \textit{et al.} \parencite*{Carnis2019_scientific_reports} have presented guidelines on how to correctly select the surface voxels, which are detailed below.
 The histogram in fig. \ref{fig:histo} represents the number of voxels per bin of normalized electronic density, the observed peak corresponds to the bulk voxels for which the amplitude of the electronic density is close to the maximum value (fig. \ref{fig:histo} - right).
-An empiric criterion to select the voxels that correspond to the crystal's surface is to take the lowest foot of that peak, here around \num{0.75}, resulting in a clear distinction between surface and bulk.
+An empiric criterion to select the voxels that correspond to the crystal's surface is to take the lowest foot of that peak, here around \num{0.75}, the surface being defined as the hull surrounding the bulk voxels.
 
 \begin{figure}[!htb]
    \centering
