--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -131,7 +131,7 @@ The Laue condition for a particular reflection is satisfied when the scattering 
     $\omega$ is always the in-plane rotation of the sample.
     The out-of-plane angular rotation is performed with $\beta$ in the horizontal configuration, whereas $\mu$ is used in the vertical configuration.\\
     $\gamma$ and $\delta$ are respectively the in-plane (out-of-plane) and out-of-plane (in-plane) detector angles in the horizontal (vertical) configuration.\\
-    The $u$ and $v$ angles are pseudo-angles used to move the position of the sample with the goniometer.
+    The $u$ and $v$ angles are pseudo-angles used to tilt the position of the sample with the goniometer.
     }
     \label{fig:Diffractometer}
 \end{figure}
