--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -130,7 +130,7 @@ Since the coherence slits also have the counter effect of decreasing the total p
     \label{tab:OpticsBCDI}
 \end{table}
 
-\subsection{Catalysis reactor}
+\subsection{Catalysis reactor}\label{sec:XCAT}
 
 A catalysis reactor is mounted on the sample stage of the MED for the study of catalytic reactions.
 A 3D view in the horizontal configuration with the high pressure surface diffraction reactor XCAT (X-ray CATalysis) set on the goniometer is illustrated in fig. \ref{fig:MEDDiffractometer}.
