--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -7,3 +7,10 @@
 
 
 PtO2 plays a role \cite{McCabe1986, HANNEVOLD2005}
+
+
+check hejral 111 2013
+
+also contains literature about the dft simulation for the oxides
+
+two $\alpha$PtO2 domains as well
