--- a/main.tex
+++ b/main.tex
@@ -233,14 +233,15 @@
     \input{Sections/2_Theory_Models/ComputerPrograms}
     
 % Results BCDI
-    \chapter{Structural evolution of Pt nanoparticles during the oxidation of ammonia}}
+    \chapter{Structural evolution of Pt nanoparticles during the oxidation of ammonia}
+    \input{Sections/3_Results_Nanoparticles/Introduction}
     \input{Sections/3_Results_Nanoparticles/BCDITempRamp}
-    \input{Sections/3_Results_Nanoparticles/SXRDEpitaxy}
+    \input{Sections/3_Results_Nanoparticles/SXRDNanoparticles}
     \input{Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia}
 
 % Results SXRD
     \chapter{Structural and chemical evolution of single Pt facets during the oxidation of ammonia}
-    \input{Sections/4_Results_SingleCrystals/Common}
+    \input{Sections/4_Results_SingleCrystals/Introduction}
     \input{Sections/4_Results_SingleCrystals/111}
     \input{Sections/4_Results_SingleCrystals/100}
 
@@ -258,11 +259,12 @@
     \chapter{Diffraction vocabulary}
     \input{Sections/6_Appendix/DiffractionVocab}
 
-    \chapter{BCDI temperature ramp data}
-    \input{Sections/6_Appendix/TempRampBCDI}
+    \chapter{Nanoparticles study}
+    \input{Sections/6_Appendix/Nanoparticles}
 
-    \chapter{3D BCDI \textit{operando} measurements}
-    \input{Sections/6_Appendix/OperandoBCDI}
+    \chapter{Single crystals study}
+    \input{Sections/6_Appendix/Pt100}
+    \input{Sections/6_Appendix/Pt111}
 
 % 4ème de couverture
 \input{Sections/99_4eme_couverture}
