--- a/references.bib
+++ b/references.bib
@@ -3411,6 +3411,20 @@ volume = {529},
 year = {2003}
 }
 
+
+@article{Nolte2008,
+author = {P. Nolte  and A. Stierle  and N. Y. Jin-Phillipp  and N. Kasper  and T. U. Schulli  and H. Dosch },
+title = {Shape Changes of Supported Rh Nanoparticles During Oxidation and Reduction Cycles},
+journal = {Science},
+volume = {321},
+number = {5896},
+pages = {1654-1658},
+year = {2008},
+doi = {10.1126/science.1160845},
+URL = {https://www.science.org/doi/abs/10.1126/science.1160845},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.1160845},
+abstract = {The microscopic insight into how and why catalytically active nanoparticles change their shape during oxidation and reduction reactions is a pivotal challenge in the fundamental understanding of heterogeneous catalysis. We report an oxygen-induced shape transformation of rhodium nanoparticles on magnesium oxide (001) substrates that is lifted upon carbon monoxide exposure at 600 kelvin. A Wulff analysis of high-resolution in situ x-ray diffraction, combined with transmission electron microscopy, shows that this phenomenon is driven by the formation of a oxygen–rhodium–oxygen surface oxide at the rhodium nanofacets. This experimental access into the behavior of such nanoparticles during a catalytic cycle is useful for the development of improved heterogeneous catalysts.}}
+
 @incollection{HARRISON2001,
 title = {A review of the effect of N fertilizer type on gaseous emissions},
 series = {Advances in Agronomy},
